# sdf-playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: AGENT_GUIDE.md  CARD_AUTHORING.md  CHANGELOG.md  CURRENT_SHADER_MODEL.md  HLSL_CARD_FLOW.md  WORKFLOW.md
docs/decisions/: 0001-cmake-build-system.md  0002-hlsli-library-structure.md  0003-imgui-for-runtime-controls.md  0004-custom-shader-include-handler.md  0005-shared-psin-struct.md  0006-per-card-local-time.md  0007-piecewise-coverflow-layout.md  0008-config-header.md  0009-vs-presets-isolated-output.md  0010-mask-color-library-split.md  README.md
docs/specs/: chore-build-output.md  chore-hlsl-cbuffer-split.md  feat-card-settings-persistence.md  feat-card-transform-style-cbuffer.md  feat-coverflow-polish.md  feat-per-card-fill-stroke-color.md  feat-sdf-mask-color.md  feat-ui-clarify.md  fix-shader-include.md  fix-vs-ps-linkage.md
docs/templates/: adr.md  merge-checklist.md  spec.md
shaders/: quad.vs.hlsl
shaders/cards/: card_01.hlsl  card_02.hlsl  card_03.hlsl  card_04.hlsl  card_05.hlsl  card_06.hlsl  card_07.hlsl  card_08.hlsl  card_09.hlsl  card_10.hlsl  card_11.hlsl  card_files.txt  card_settings.txt
shaders/lib/: sdf_animation.hlsli  sdf_cbuffers.hlsli  sdf_color.hlsli  sdf_common.hlsli  sdf_mask.hlsli  sdf_operators.hlsli  sdf_shapes.hlsli  sdf_transform.hlsli
src/: App.cpp  App.h  Config.h  Coverflow.cpp  Coverflow.h  FileWatcher.cpp  FileWatcher.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  main.cpp
